--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900);
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700,300,200);
 
-
-
+body{
+  background: linear-gradient(119.34deg, #FFC1C1 2.19%, #BEF7F3 102.58%);
+}
 
 .navBar{
   display: flex;
@@ -38,11 +37,12 @@
   margin:0 150px"
 }
 #textarea{
+  cursor:text;
   display: flex;
-  background-color: whitesmoke; 
-  /* border-color: black; */
+  background: whitesmoke;
   border:0;
-  border-radius: 5px;
+  box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
+  border-radius: 4px;
 }
 .btsection{
   padding: 18px;
